<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_selected"
        android:clickable="true"
        android:paddingTop="15dp">

    <com.abtasty.flagship_demo.app.utils.LatoRegularTextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flagship_campaign_5_title"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.abtasty.flagship_demo.app.utils.LatoRegularTextView
            android:id="@+id/item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flagship_campaign_5_desc"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_title" />

    <Button
            android:id="@+id/page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gradient"
            android:text="@string/flagship_campaign_5_page"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/item_sep"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/item_desc"
            app:layout_constraintWidth_percent="0.23" />

    <Button
            android:id="@+id/transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gradient"
            android:padding="5dp"
            android:text="@string/flagship_campaign_5_transaction"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/page"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/page"
            app:layout_constraintWidth_percent="0.23" />

    <Button
            android:id="@+id/event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gradient"
            android:text="@string/flagship_campaign_5_event"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline2"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/page"
            app:layout_constraintWidth_percent="0.23" />

    <Button
            android:id="@+id/item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gradient"
            android:text="@string/flagship_campaign_5_item"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/page"
            app:layout_constraintLeft_toLeftOf="@id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/page"
            app:layout_constraintWidth_percent="0.23" />

    <FrameLayout
            android:id="@+id/item_sep"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    <com.abtasty.flagship_demo.app.utils.LatoRegularTextView
            android:id="@+id/vip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey_transparent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:text="@string/flagship_campaign_5_vip"
            android:elevation="10dp"
            android:clickable="true">

    </com.abtasty.flagship_demo.app.utils.LatoRegularTextView>
</androidx.constraintlayout.widget.ConstraintLayout>