<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey"
        tools:context=".qa.AutomaticContextActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/auto_context_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toTopOf="@id/send"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auto_context_title" />

    <com.abtasty.flagship.app.utils.LatoLightTextView
            android:id="@+id/auto_context_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flagship_qa_auto_context"
            android:textColor="@color/gradient_start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.abtasty.flagship.app.utils.LatoLightTextView
            android:id="@+id/auto_context_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/flagship_qa_auto_context_results"
            android:textColor="@color/gradient_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send" />

    <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_gradient"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/flagship_qa_section_context_send"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

    <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_gradient"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/flagship_qa_section_context_reset"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/send"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>